Refactor code to use well defined packages Update logging to log4j2 with proper configuration to view test logging, prepared statement values, etc